compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__allowed_string_escapes.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 548
expression: "pub fn a() { \"\\n\" \"\\r\" \"\\t\" \"\\\\\" \"\\\"\" \"\\\\^\" }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn a() { "\n" "\r" "\t" "\\" "\"" "\\^" }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/0]).

-file("project/test/my/mod.gleam", 1).
-spec a() -> binary().
a() ->
    <<"\n"/utf8>>,
    <<"\r"/utf8>>,
    <<"\t"/utf8>>,
    <<"\\"/utf8>>,
    <<"\""/utf8>>,
    <<"\\^"/utf8>>.
