compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__bit_pattern_shadowing.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 1005
expression: "\npub fn main() {\n  let code = <<\"hello world\":utf8>>\n  let pre = 1\n  case code {\n    <<pre:bytes-size(pre), _:bytes>> -> pre\n    _ -> panic\n  }\n}        "
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let code = <<"hello world":utf8>>
  let pre = 1
  case code {
    <<pre:bytes-size(pre), _:bytes>> -> pre
    _ -> panic
  }
}        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    Code = <<"hello world"/utf8>>,
    Pre = 1,
    case Code of
        <<Pre@1:Pre/binary, _/binary>> ->
            Pre@1;

        _ ->
            erlang:error(#{gleam_error => panic,
                    message => <<"`panic` expression evaluated."/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"main"/utf8>>,
                    line => 7})
    end.
