compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__discard_in_assert.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 565
expression: "pub fn x(y) {\n  let assert Ok(_) = y\n  1\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn x(y) {
  let assert Ok(_) = y
  1
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/1]).

-file("project/test/my/mod.gleam", 1).
-spec x({ok, any()} | {error, any()}) -> integer().
x(Y) ->
    case Y of
        {ok, _} -> nil;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"x"/utf8>>,
                        line => 2,
                        value => _assert_fail,
                        start => 16,
                        'end' => 36,
                        pattern_start => 27,
                        pattern_end => 32})
    end,
    1.
